Prep for talk tomorrow

--- a/research/talks/cuwip_2020/index.html
+++ b/research/talks/cuwip_2020/index.html
@@ -159,46 +159,76 @@
 <section data-markdown>
 	<script type="text/template">
 		## This is _not_ where I started
-		- Worked nights at concert hall
-		- SPS and COMAP
-		<img src="../../../public/media/figures/qkd-concept-u.png" alt="diagram for qkd concept" style="width: 80%;" />
+		<div class="two-col-container">
+			<div class="left-col">
+				<ul>
+					<li>Worked nights at concert hall</li>
+					<li>Society of physics students</li>
+				</ul>
+		</div>
+	<div class="right-col">
+		<img src="../../../public/media/figures/bethel-lab.jpg" alt="diagram for qkd concept" style="width: 80%;" />
+	</div>
+</div>
 	</script>
 </section>
 
 <!--==================================================================================-->
 <section data-markdown>
 	<script type="text/template">		
-		- Did research internships every summer
-		<img src="../../../public/media/figures/qkd-concept-u.png" alt="diagram for qkd concept" style="width: 80%;" />
-		TODO: Pic of UR Labs
+		- Did research internships every summer 
+
+
+		<div class="two-col-container">
+			<div class="left-col">
+				<img data-src="../../../public/media/figures/nist-lab.jpg" alt="" style="width: 100%;"/>
+				<h4>NIST</h4>
+			</div>
+			<div class="right-col">
+				<img data-src="../../../public/media/figures/caltech-lab.jpg" alt="" style="width: 100%;"/>
+				<h4>Caltech</h4>
+			</div>
+		</div>
+
 	</script>
 </section>
 
 <!--==================================================================================-->
-<section data-markdown>
+<section data-markdown data-background="../../../public/media/figures/math-pumpkins.jpg" data-background-size=120%>
 	<script type="text/template">
 		## My first community: MathLab
-		- Helped me solidify my own knowledge
-		- Great practice communicating 
-		- Getting people to that "ah-ha" moment was very rewarding
-		TODO: Pic of Mathlab/ppl
+
+	</script>
+</section>
+
+<!--==================================================================================-->
+<section data-markdown >
+	<script type="text/template">
+		- Helped me solidify my own knowledge and practice communicating
+
+		<img data-src="../../../public/media/figures/physics-dept.jpg" alt="" style="width: 70%;"/>
+
 	</script>
 </section>
 
 <!--==================================================================================-->
 <section data-markdown>
 	<script type="text/template">
-		 giph for change
+		## Tips for small group teaching
+		- Circle seating are your friend
+		- Show _your_ thinking process, it more useful than the answer
+		- Humor is hard, but it will help de-stress the environment
 	</script>
 </section>
 
 <!--==================================================================================-->
 <section data-markdown>
 	<script type="text/template">
-		## Transition: Gradschool?
-		- Failed the Phyics GREs the first time
-		- Mental health tanked
-		- Got a SW developer job at Wolfram Mathematica to save up for next year applications
+		## Gradschool?
+		- Failed the Physics GREs the first time
+		- Got a SW developer job at Wolfram Mathematica
+
+		<iframe src="https://giphy.com/embed/mBY0lSBpDda7G4GqRi" width="454" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/jjennings-dog-confused-frida-mBY0lSBpDda7G4GqRi">via GIPHY</a></p>
 	</script>
 </section>
 
@@ -279,7 +309,7 @@
 data-background-position="bottom"
 data-background-size="80%">
 <h3 style="position: relative;font-size: 120%; top: -2em;">
-   Challenge 2: <br> overcoming distance: 
+   Challenge \#2: <br> overcoming distance: 
 </h3>
 <p style="position: relative;font-size: 120%; top: -2em;">
    QKD receiver satellite
@@ -335,7 +365,7 @@ data-background-size="80%">
 <section data-markdown>
 	<script type="text/template">
 		- Hosted seminars and discussion groups on inclusion, intersectionality in Physics
-		- Learned so much about how to best take care of myself and others
+		- Learned how to best take care of myself and others
 
 		<div class="two-col-container">
 			<div class="left-col">
@@ -352,7 +382,7 @@ data-background-size="80%">
 <!--==================================================================================-->
 <section data-markdown>
 	<script type="text/template">
-		## Transition: Postdoc in Australia
+		## Postdoc in Sydney 🦘
 		- Natural disasters and racism happens
 
 		<iframe src="https://giphy.com/embed/foLJQ8nq83CLu" width="480" height="356" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/school-flood-canceled-foLJQ8nq83CLu">via GIPHY</a></p>
@@ -365,6 +395,7 @@ data-background-size="80%">
 	<script type="text/template">
 		- Making Lemonade: Created workshop to help everyone do better science
 			- https://github.com/QuinnPhys/PythonWorkshop-science
+
 		<img data-src="../../../public/media/figures/equis-workshop-github.png" alt="Sarah at Build 2018" >
 		
 	</script>
@@ -409,7 +440,7 @@ data-background-size="80%">
 	<script type="text/template">
 		- Social media helped me learn really fast what other STEM/Tech people did day to day
 
-		<img data-src="../../../public/media/figures/twitter-science.png" alt="" style="width: 60%;"/>
+		<img data-src="../../../public/media/figures/twitter-work.png" alt="" style="width: 75%;"/>
 	</script>
 </section>
 
