fixing some typos before talk

--- a/research/talks/cuwip_2020/index.html
+++ b/research/talks/cuwip_2020/index.html
@@ -182,10 +182,12 @@
 		<div class="two-col-container">
 			<div class="left-col">
 				<img data-src="../../../public/media/figures/nist-lab.jpg" alt="" style="width: 100%;"/>
+				<br>
 				<h4>NIST</h4>
 			</div>
 			<div class="right-col">
 				<img data-src="../../../public/media/figures/caltech-lab.jpg" alt="" style="width: 100%;"/>
+				<br>
 				<h4>Caltech</h4>
 			</div>
 		</div>
@@ -215,7 +217,7 @@
 <section data-markdown>
 	<script type="text/template">
 		## Tips for small group teaching
-		- Circle seating are your friend
+		- Circle seating is your friend
 		- Show _your_ thinking process, it more useful than the answer
 		- Humor is hard, but it will help de-stress the environment
 	</script>
@@ -309,7 +311,7 @@
 data-background-position="bottom"
 data-background-size="80%">
 <h3 style="position: relative;font-size: 120%; top: -2em;">
-   Challenge \#2: <br> overcoming distance: 
+   Challenge #2: <br> overcoming distance: 
 </h3>
 <p style="position: relative;font-size: 120%; top: -2em;">
    QKD receiver satellite
