last min talk tweeks

--- a/research/talks/cuwip_2020/index.html
+++ b/research/talks/cuwip_2020/index.html
@@ -149,6 +149,16 @@
 <!--==================================================================================-->
 <section data-markdown>
 	<script type="text/template">
+	When we do science _together_ we can make magic ✨
+
+	<iframe src="https://giphy.com/embed/26gN16cJ6gy4LzZSw" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/hbo-harry-potter-26gN16cJ6gy4LzZSw">via GIPHY</a></p>
+			
+	</script>
+</section>
+
+<!--==================================================================================-->
+<section data-markdown>
+	<script type="text/template">
 	# Part 1: #
 	### Communities help us learn together ###
 			
