Adding workshop slides for CUWiP

--- a/research/talks/cuwip_2020/index.html
+++ b/research/talks/cuwip_2020/index.html
@@ -104,7 +104,7 @@
 <section data-markdown>
 	<script type="text/template">
 	#### by day....
-	- Get to keep learning all the time, and really interesting problems
+	- Get to keep learning all the time, and solve really interesting problems
 	- I see things I helped make on the shelves at the store!
 	
 	<div class="two-col-container">
@@ -133,7 +133,7 @@
 	<script type="text/template">
 	#### by night....
 	- I love talking about research and continuing to contribute to the community
-	- Showing people how cool and not scary quantum technology is
+	- Showing people how cool and accessible quantum technology is
 	<div class="two-col-container">
 		<div class="left-col">
 			<img data-src="../../../public/media/figures/LQCPQ.png" alt="" style="width: 70%;"/>
@@ -168,7 +168,7 @@
 <!--==================================================================================-->
 <section data-markdown>
 	<script type="text/template">
-		## This is _not_ where I started
+		### embarrassing-photo.png
 		<div class="two-col-container">
 			<div class="left-col">
 				<ul>
@@ -292,7 +292,7 @@
 <section data-markdown>
 	<script type="text/template">
 		### \# 1: Hardware security
-		Wanted to find ways to break commercial hardware, but not destroy it
+		Needed to break commercial hardware, but not destroy it
 
 		<iframe src="https://giphy.com/embed/3o72FfM5HJydzafgUE" width="480" height="273" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/bobs-burgers-fox-bobs-burgers-tv-3o72FfM5HJydzafgUE">via GIPHY</a></p>
 	</script>	
