muting video, minor formatting fixes to manning talk

--- a/research/talks/manninglive_community_2020/index.html
+++ b/research/talks/manninglive_community_2020/index.html
@@ -180,7 +180,7 @@
     </script>
 </section>
 <!--==================================================================================-->
-<section  data-background-video="../../../public/media/figures/qdwm-clip.mp4">
+<section  data-background-video="../../../public/media/figures/qdwm-clip.mp4" data-background-video-muted=true>
     <h3 class="fragment">bonus: Live coding!</h3>
 </section>
 
@@ -272,11 +272,11 @@
 <section data-markdown>
     <script type="text/template">
         ### How we grow as individuals w/ our communities?
-        - ASK FOR HELP! 
+        - **ASK FOR HELP! **
             - Mentorship or group brainstorming can be super helpful.
-        - Be a self-care role model! 
+        - **Be a self-care role model!** 
             - Remind people we are humans first, developers second.
-        - Validate everyone's presence
+        - **Validate everyone's presence**
             - Ask for pronouns, ensure docs reflect all users, etc.
 
     </script>
@@ -363,7 +363,7 @@
     <script type="text/template">
         ## Networking tips
         - Use social media at events and tag meetups, it helps people find and remember you.
-        - Ask lots of questions and Don't be afraid of following-up after the event.
+        - Ask lots of questions and don't be afraid of following-up after the event.
         - Have some fun icebreakers on hand to help get people talking.
          
     </script>
