--- a/research/talks/manninglive_community_2020/index.html
+++ b/research/talks/manninglive_community_2020/index.html
@@ -376,10 +376,10 @@
 <!--==================================================================================-->
 <section data-markdown>
     <script type="text/template">
-    ## Community helped me learn how to ...
-    - Communicate and teach better
-    - Practice self care and stand up for others
-    - Network and self promote 
+    ## Summary
+    - 📚 Community can be a great resource for learning new things
+    - 💪 Community can help us practice self care for ourselves and others
+    - 📶 Community can grow our professional network 
     </script>
 </section>
 
