Adding a few links

--- a/research/talks/manninglive_community_2020/index.html
+++ b/research/talks/manninglive_community_2020/index.html
@@ -277,7 +277,7 @@
         - **Be a self-care role model!** 
             - Remind people we are humans first, developers second.
         - **Validate everyone's presence**
-            - Ask for pronouns, ensure docs reflect all users, etc.
+            - Ask for pronouns, ensure docs reflect all users, Codes of Conduct, etc.
 
     </script>
 </section>
@@ -380,6 +380,8 @@
     - 📚 Community can be a great resource for learning new things
     - 💪 Community can help us practice self care for ourselves and others
     - 📶 Community can grow our professional network 
+      - [wiqca.dev](wiqca.dev)
+      - [qsharp.community](qsharp.community)
     </script>
 </section>
 
