adding reveal support

--- a/talks/cuwip_2020_scicomm/index.html
+++ b/talks/cuwip_2020_scicomm/index.html
@@ -92,7 +92,7 @@
 	</section>	
 
 	<!--==================================================================================-->
-	<section data-markdown data-background="../../../public/media/figures/pensar-view.jpg" data-background-size=110%>
+	<section data-markdown data-background="/static/img/figures/pensar-view.jpg" data-background-size=110%>
 		<script type="text/template">
 		#### by day....
 		### Pensar Development: Research Engineer
@@ -109,17 +109,17 @@
 		
 		<div class="two-col-container">
 			<div class="left-col">
-				<img data-src="../../../public/media/figures/pensar-bio.png" alt="" style="width: 55%;"/>
+				<img data-src="/static/img/figures/pensar-bio.png" alt="" style="width: 55%;"/>
 			</div>
 			<div class="right-col">
-				<img data-src="../../../public/media/figures/pensar-piper.jpg" alt="" style="width: 100%;"/>
+				<img data-src="/static/img/figures/pensar-piper.jpg" alt="" style="width: 100%;"/>
 			</div>
 		</div>	
 		</script>
 	</section>
 
 	<!--==================================================================================-->
-	<section data-markdown data-background="../../../public/media/figures/sarah-build-talk.png" data-background-size=110%>
+	<section data-markdown data-background="/static/img/figures/sarah-build-talk.png" data-background-size=110%>
 		<script type="text/template">
 		#### by night....
 		### Quantum Computing technology advocate
@@ -137,10 +137,10 @@
 
 		<div class="two-col-container">
 			<div class="left-col">
-				<img data-src="../../../public/media/figures/LQCPQ.png" alt="" style="width: 70%;"/>
+				<img data-src="/static/img/figures/LQCPQ.png" alt="" style="width: 70%;"/>
 			</div>
 			<div class="right-col">
-				<img data-src="../../../public/media/figures/kaiser-book-collection.jpg" alt="" style="width: 80%;"/>
+				<img data-src="/static/img/figures/kaiser-book-collection.jpg" alt="" style="width: 80%;"/>
 			</div>
 		</div>	
 				
@@ -157,11 +157,11 @@
 
 <div class="two-col-container">
 	<div class="left-col">
-		<img data-src="../../../public/media/figures/nist-lab.jpg" alt="" style="width: 100%;"/>
+		<img data-src="/static/img/figures/nist-lab.jpg" alt="" style="width: 100%;"/>
 			<h4>NIST</h4>
 	</div>
 	<div class="right-col">
-		<img data-src="../../../public/media/figures/caltech-lab.jpg" alt="" style="width: 100%;"/>
+		<img data-src="/static/img/figures/caltech-lab.jpg" alt="" style="width: 100%;"/>
 
 		<h4>Caltech</h4>
 	</div>
@@ -182,12 +182,12 @@
 	</section>
 
 	<!--==================================================================================-->
-	<section data-markdown data-background="../../../public/media/figures/thesis-future.jpg" data-background-size=50%>
+	<section data-markdown data-background="/static/img/figures/thesis-future.jpg" data-background-size=50%>
 		<script type="text/template">
 			## Gradschool!
 			<!--- Thesis: _Quantum key distribution systems: how to make them and how to break them_
 
-			<img data-src="../../../public/media/figures/thesis-future.jpg" alt="Thesis with typo on cover page" style="width: 50%;" />-->
+			<img data-src="/static/img/figures/thesis-future.jpg" alt="Thesis with typo on cover page" style="width: 50%;" />-->
 
 		</script>
 	</section>
@@ -196,7 +196,7 @@
 	<section data-markdown>
 		<script type="text/template">
 			### My Favorite things: Photons!
-			<img data-src="../../../public/media/figures/laser-glow.jpg" alt="Sarah in the dark in the laser lab" >
+			<img data-src="/static/img/figures/laser-glow.jpg" alt="Sarah in the dark in the laser lab" >
 		
 		</script>
 	</section>
@@ -209,7 +209,7 @@
 			- Objective: share a secret key between Alice and Bob
 			- Main challenges are *hardware security* and *distance*
 
-			<img src="../../../public/media/figures/qkd-concept-u.png" alt="diagram for qkd concept" style="width: 80%;" />
+			<img src="/static/img/figures/qkd-concept-u.png" alt="diagram for qkd concept" style="width: 80%;" />
 
 			Note:
 			Key EXPANSION protocol, relate to DH 
@@ -226,16 +226,16 @@
 	</section>
 
 	<!--==================================================================================-->
-	<section data-markdown data-background-video="../../../public/media/figures/fiber-fuse-crop-nosound.mp4" >
+	<section data-markdown data-background-video="/static/img/figures/fiber-fuse-crop-nosound.mp4" >
 		<script type="text/template">
 			<h2 class="fragment" data-fragment-index="1">Fiber fusing</h2>
-			<img class="fragment" data-fragment-index="1"src="../../../public/media/figures/fiberfuse.jpg" alt="Laser damage fiber close-up" style="height: 10% width: 100%">
+			<img class="fragment" data-fragment-index="1"src="/static/img/figures/fiberfuse.jpg" alt="Laser damage fiber close-up" style="height: 10% width: 100%">
 
 		</script>
 	</section>
 
 	<!--==================================================================================-->
-	<section data-background-image="../../../public/media/figures/sat-concept.png"
+	<section data-background-image="/static/img/figures/sat-concept.png"
 	data-background-position="bottom"
 	data-background-size="80%">
 	<h3 style="position: relative;font-size: 120%; top: -2em;">
@@ -244,7 +244,7 @@
 	<p style="position: relative;font-size: 120%; top: -2em;">
 	QKD receiver satellite
 	</p>
-	<!-- <img data-src="../../../public/media/figures/sat-concept.png" alt="Reciever payload schematic"> -->
+	<!-- <img data-src="/static/img/figures/sat-concept.png" alt="Reciever payload schematic"> -->
 	</section>
 
 	<!--==================================================================================-->
@@ -252,17 +252,17 @@
 		<script type="text/template">
 		<div class="two-col-container">
 			<div class="left-col">
-				<img data-src="../../../public/media/figures/qkd-flight-prep.jpg" alt="" style="width: 100%;"/>
+				<img data-src="/static/img/figures/qkd-flight-prep.jpg" alt="" style="width: 100%;"/>
 			</div>
 			<div class="right-col">
-				<img data-src="../../../public/media/figures/qkd-flight.jpg" alt="" style="width: 100%;"/>
+				<img data-src="/static/img/figures/qkd-flight.jpg" alt="" style="width: 100%;"/>
 			</div>
 		</div>	
 	</script>
 	</section>
 
 	<!--==================================================================================-->
-	<section data-markdown data-background="../../../public/media/figures/dead-end.jpg" data-background-size=60%>
+	<section data-markdown data-background="/static/img/figures/dead-end.jpg" data-background-size=60%>
 		<script type="text/template">
 			
 		</script>
@@ -301,10 +301,10 @@
 
 			<div class="two-col-container">
 				<div class="left-col">
-					<img data-src="../../../public/media/figures/femphys-poster.jpg" alt="" style="width: 60%;"/>
+					<img data-src="/static/img/figures/femphys-poster.jpg" alt="" style="width: 60%;"/>
 				</div>
 				<div class="right-col">
-					<img data-src="../../../public/media/figures/femphys-poster-2.png" alt="" style="width: 60%;"/>
+					<img data-src="/static/img/figures/femphys-poster-2.png" alt="" style="width: 60%;"/>
 				</div>
 			</div>
 
@@ -317,7 +317,7 @@
 			### Open houses/Lab tours
 			
 
-			<img data-src="../../../public/media/figures/iqc-openhouse-2012.jpg" alt="" style="width: 80%;"/>
+			<img data-src="/static/img/figures/iqc-openhouse-2012.jpg" alt="" style="width: 80%;"/>
 			
 
 		</script>
@@ -328,7 +328,7 @@
 		<script type="text/template">
 			## Light Illuminated
 			
-			<img data-src="../../../public/media/figures/light-illuminated.png" alt="" style="width: 100%;"/>
+			<img data-src="/static/img/figures/light-illuminated.png" alt="" style="width: 100%;"/>
 			
 
 		</script>
@@ -346,7 +346,7 @@
 
 
 	<!--==================================================================================-->
-	<section data-markdown data-background="../../../public/media/figures/quantum-cats.png" data-background-size=40%>
+	<section data-markdown data-background="/static/img/figures/quantum-cats.png" data-background-size=40%>
 		<script type="text/template">
 
 
@@ -373,7 +373,7 @@
 			- Making Lemonade: Created workshop to help everyone do better science
 				- https://github.com/QuinnPhys/PythonWorkshop-science
 
-			<img data-src="../../../public/media/figures/equis-workshop-github.png" alt="Sarah at Build 2018" >
+			<img data-src="/static/img/figures/equis-workshop-github.png" alt="Sarah at Build 2018" >
 			
 		</script>
 	</section>
@@ -382,7 +382,7 @@
 			<script type="text/template">
 				- Social media helped me learn really fast what other STEM/Tech people did to share their tech
 	
-				<img data-src="../../../public/media/figures/twitter-work.png" alt="" style="width: 75%;"/>
+				<img data-src="/static/img/figures/twitter-work.png" alt="" style="width: 75%;"/>
 			</script>
 		</section>
 	
@@ -393,10 +393,10 @@
 
 		<div class="two-col-container">
 			<div class="left-col">
-				<img data-src="../../../public/media/figures/build-2018.jpg" alt="Sarah at Build 2018" >
+				<img data-src="/static/img/figures/build-2018.jpg" alt="Sarah at Build 2018" >
 			</div>
 			<div class="right-col">
-				<img data-src="../../../public/media/figures/build-2019.jpg" alt="Sarah's speaker badge for Build from 2019" >
+				<img data-src="/static/img/figures/build-2019.jpg" alt="Sarah's speaker badge for Build from 2019" >
 			</div>
 		</div>
 		</script>
@@ -407,7 +407,7 @@
 		<script type="text/template">
 			### SciComm Networking++
 
-			<img data-src="../../../public/media/figures/twitter-supercon.png" alt="" style="width: 60%;"/>
+			<img data-src="/static/img/figures/twitter-supercon.png" alt="" style="width: 60%;"/>
 			
 		</script>
 	</section>
