--- a/talks/manninglive_community_2020/index.html
+++ b/talks/manninglive_community_2020/index.html
@@ -90,7 +90,7 @@
 </section>	
 
 <!--==================================================================================-->
-<section data-markdown data-background="../../../public/media/figures/sarah-build-talk.png" data-background-size=110%>
+<section data-markdown data-background="/static/img/figures/sarah-build-talk.png" data-background-size=110%>
     <script type="text/template">
     #### whoami
     ## Quantum Computing technologist...
@@ -104,7 +104,7 @@
     <script type="text/template">
     ### author, streamer, community builder
 
-    <img data-src="../../../public/media/figures/kaiser-bio.png" alt="" style="width: 75%;"/> 
+    <img data-src="/static/img/figures/kaiser-bio.png" alt="" style="width: 75%;"/> 
     </script>
 </section>
 <!--==================================================================================-->
@@ -151,7 +151,7 @@
 </section>
 
 <!--==================================================================================-->
-<section data-markdown data-background="../../../public/media/figures/math-pumpkins.jpg" data-background-size=120%>
+<section data-markdown data-background="/static/img/figures/math-pumpkins.jpg" data-background-size=120%>
     <script type="text/template">
         ## My first community: MathLab
 
@@ -163,7 +163,7 @@
     <script type="text/template">
         Mathlab helped me learn and practice teaching
 
-        <img data-src="../../../public/media/figures/physics-dept.jpg" alt="" style="width: 60%;"/>
+        <img data-src="/static/img/figures/physics-dept.jpg" alt="" style="width: 60%;"/>
 
     </script>
 </section>
@@ -180,7 +180,7 @@
     </script>
 </section>
 <!--==================================================================================-->
-<section  data-background-video="../../../public/media/figures/qdwm-clip.mp4" data-background-video-muted=true>
+<section  data-background-video="/static/img/figures/qdwm-clip.mp4" data-background-video-muted=true>
     <h3 class="fragment">bonus: Live coding!</h3>
 </section>
 
@@ -209,7 +209,7 @@
 <section data-markdown>
     <script type="text/template">
         ### My Favorite things: Photons!
-        <img data-src="../../../public/media/figures/laser-glow.jpg" alt="Sarah in the dark in the laser lab"style="width: 70%;" >
+        <img data-src="/static/img/figures/laser-glow.jpg" alt="Sarah in the dark in the laser lab"style="width: 70%;" >
     
     </script>
 </section>
@@ -246,10 +246,10 @@
 
         <div class="two-col-container">
             <div class="left-col">
-                <img data-src="../../../public/media/figures/femphys-poster.jpg" alt="" style="width: 50%;"/>
+                <img data-src="/static/img/figures/femphys-poster.jpg" alt="" style="width: 50%;"/>
             </div>
             <div class="right-col">
-                <img data-src="../../../public/media/figures/femphys-poster-2.png" alt="" style="width: 50%;"/>
+                <img data-src="/static/img/figures/femphys-poster-2.png" alt="" style="width: 50%;"/>
             </div>
         </div>
 
@@ -262,7 +262,7 @@
         - Learned how to best take care of myself and others
         - `man burnout`
 
-        <img data-src="../../../public/media/figures/acnh-2020.jpg" alt="" style="width: 60%;"/>
+        <img data-src="/static/img/figures/acnh-2020.jpg" alt="" style="width: 60%;"/>
 
     </script>
 </section>
@@ -282,7 +282,7 @@
     </script>
 </section>
 <!--==================================================================================-->
-<section data-markdown data-background="../../../public/media/figures/thesis-future.jpg" data-background-size=50%>
+<section data-markdown data-background="/static/img/figures/thesis-future.jpg" data-background-size=50%>
 
 </section>
 
@@ -301,7 +301,7 @@
 
         Social media helped me learn what other STEM/Tech people ACTUALLY did day to day:
 
-        <img data-src="../../../public/media/figures/twitter-work.png" alt="" style="width: 75%;"/>
+        <img data-src="/static/img/figures/twitter-work.png" alt="" style="width: 75%;"/>
     </script>
 </section>
 <!--==================================================================================-->
@@ -310,7 +310,7 @@
         #### `$ dotnet run`
         Once I knew what I should be doing, I jumped in and tried it!
 
-        <img data-src="../../../public/media/figures/twitter-build.png" alt="" style="width: 45%;"/>
+        <img data-src="/static/img/figures/twitter-build.png" alt="" style="width: 45%;"/>
     </script>
 </section>
 <!--==================================================================================-->
@@ -328,7 +328,7 @@
     <script type="text/template">
         #### `@EntryPoint()`
         ## Meetup groups = 💖
-        <img data-src="../../../public/media/figures/meetup-groups.png" alt="" style="width: 75%;"/>
+        <img data-src="/static/img/figures/meetup-groups.png" alt="" style="width: 75%;"/>
     </script>
 </section>
 
@@ -336,7 +336,7 @@
 <section data-markdown>
     <script type="text/template">
         #### `networking++`
-        <img data-src="../../../public/media/figures/twitter-supercon.png" alt="" style="width: 50%;"/>
+        <img data-src="/static/img/figures/twitter-supercon.png" alt="" style="width: 50%;"/>
          
     </script>
 </section>
@@ -348,10 +348,10 @@
 
     <div class="two-col-container">
         <div class="left-col">
-            <img data-src="../../../public/media/figures/build-2018.jpg" alt="Sarah at Build 2018" >
+            <img data-src="/static/img/figures/build-2018.jpg" alt="Sarah at Build 2018" >
         </div>
         <div class="right-col">
-            <img data-src="../../../public/media/figures/build-2019.jpg" alt="Sarah's speaker badge for Build from 2019" >
+            <img data-src="/static/img/figures/build-2019.jpg" alt="Sarah's speaker badge for Build from 2019" >
         </div>
     </div>
     </script>
@@ -370,7 +370,7 @@
 </section>
 
 <!--==================================================================================-->
-<section data-markdown data-background="../../../public/media/figures/gh-profile.png" data-background-size=70%>
+<section data-markdown data-background="/static/img/figures/gh-profile.png" data-background-size=70%>
 
 </section>
 <!--==================================================================================-->
